# tanakai

./: .gitignore  Cargo.toml  README.md  api.bat  update.json
assets/icons/theme/: colors.json  styles.json
client/: Cargo.toml  README.md  build.rs
client-py/: requirements.txt  tanakai.py
client-py/config/: config.py
client-py/core/: __init__.py  api.py  base.py  handlers.py  logger.py  manager.py  sniffer.py  system.py  update.py
client-py/photon/: __init__.py  callback.py  packet_processor.py  processors.py  sniffer.py
client-py/utils/: __init__.py  check_game_running.py  check_tanakai_server.py  functions.py  npcap.py  open_albion.py  packet_processors.py  packet_sniffer.py  sniffer_callback.py
client/src/: main.rs
client/src/capture/: pcap_handler.rs
client/src/config/: mod.rs
client/src/hwid/: collector.rs  crypto.rs  validator.rs
client/src/models/: mod.rs  photon_event.rs
client/src/photon/: layer.rs  mod.rs
client/src/ui/: mod.rs  window.rs
client/src/ui/components/: button.rs  card.rs  header.rs  mod.rs  sidebar.rs  status.rs
client/src/ui/dashboard/: mod.rs
client/src/ui/theme/: mod.rs
client/src/ui/windows/: mod.rs
client/src/utils/: logger.rs  mod.rs  network.rs
database/: tanakai.db
server/: README.md  main.py  requirements.txt
server/api/: deps.py
server/api/v1/: api.py
server/api/v1/client/: hardware_id.py  new_os.py
server/api/v1/endpoints/: clients.py  harvestables.py  items.py  mobs.py
server/api/v1/info/: clients.py  items.py  regions.py
server/core/: config.py  security.py
server/db/: base.py  create_tables.py  initialize.py  reset_db.py
server/models/: client.py
server/schemas/: client.py  harvestables.py  items.py  mobs.py  regions.py
server/scripts/: check_harvestables_xml.py  check_items_xml.py  check_mobs_xml.py
server/services/: client.py
server/utils/: __init__.py  get_dumps.py  read_harvestables.py  read_items.py  read_mobs.py
src/: main.rs
src/api/: client.rs  mod.rs
src/capture/: mod.rs
src/config/: mod.rs
src/hwid/: mod.rs
src/models/: market.rs  player.rs
src/photon/: command.rs  fragment_buffer.rs  parser.rs
src/ui/: mod.rs  tray.rs  window.rs
