[package]
name = "tanakai"
version = "0.1.0"
edition = "2021"
authors = ["Tanakai Team"]
description = "Um sniffer de pacotes Photon para o Albion Online"

[dependencies]
pcap = "0.11.0"
tokio = { version = "1.28.2", features = ["full"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
log = "0.4.17"
env_logger = "0.10.0"
clap = { version = "4.3.0", features = ["derive"] }
reqwest = { version = "0.11.18", features = ["json"] }
anyhow = "1.0.71"
thiserror = "1.0.40"
bytes = "1.4.0"
hex = "0.4.3"
byteorder = "1.4.3"
once_cell = "1.18.0"
sha2 = "0.10.7"
base64 = "0.21.2"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
sysinfo = "0.29.2"
aes-gcm = "0.10.1"
rand = "0.8.5"
