[package]
name = "tanakai"
version = "0.1.0"
edition = "2021"
authors = ["Tanakai Team"]
description = "Um sniffer de pacotes Photon para o Albion Online"

# Incluir arquivos de assets no executável final
include = [
    "assets/**/*",
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
pcap = "0.11.0"
tokio = { version = "1.28.2", features = ["full"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
log = "0.4.17"
env_logger = "0.10.0"
clap = { version = "4.3.0", features = ["derive"] }
reqwest = { version = "0.11.18", features = ["json"] }
anyhow = "1.0.71"
thiserror = "1.0.40"
bytes = "1.4.0"
hex = "0.4.3"
byteorder = "1.4.3"
once_cell = "1.18.0"
sha2 = "0.10.7"
base64 = "0.21.2"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
sysinfo = "0.29.2"
aes-gcm = "0.10.1"
rand = "0.8.5"
tray-icon = "0.5.1"
open = "5.0.0"
semver = "1.0.17"
egui = "0.22.0"
eframe = "0.22.0"
egui_extras = "0.22.0"
image = "0.24.7"
notify = "6.0.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.48.0", features = [
    "Win32_UI_WindowsAndMessaging", 
    "Win32_Foundation",
    "Win32_System_Threading"
] }

[package.metadata.bundle]
name = "Tanakai"
identifier = "io.tanakai.sniffer"
icon = ["assets/icon.ico"]
version = "0.1.0"
copyright = "Copyright (c) Tanakai Team 2023. All rights reserved."
category = "Utility"
short_description = "Sniffer de pacotes Photon para Albion Online"
